Calculadora JFrame FINAL

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@
 /MataPeCeS/nbproject/private/
 /MataPeCeS/build/
 /CupOfCoffee/nbproject/private/
+/RegistroUsuarios/nbproject/private/
+/RegistroUsuarios/build/
+/RegistroUsuarios/dist/
+/EjecutarMusica/nbproject/private/
+/Portapapeles/nbproject/private/
+/Portapapeles/build/
+/EjecutarMusica/build/
+/EjecutarMusica/dist/
