Base de datos local con un .txt

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 /EjecutarMusica/dist/
 /CupOfCoffee/build/
 /CalculadoraJFrame/dist/
+/GestionDeLigaDeFutbol/nbproject/private/
+/BaseDeDatosTXT/nbproject/private/
+/BaseDeDatosTXT/build/
